<resources>
    <string name="app_name">Partyer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hashtagExample">#питьчай#настолки#дикаятуса#поботать</string>
	<string name="welcome">
		 <b>Добро пожаловать в приложение Partyer! </b>
	</string>
    <string name="info1">   	В этом приложении вы можете создать свое мероприятие или пойти на мероприятие других пользователей приложения.</string>
	<string name="info2">   	Для того что бы создать свое мероприятие нажмите на любую точку на карте, где оно будет проходить или нажмите на <b>+</b> внизу экрана,  для того, что бы довавить мероприятие на том месте где вы сейчас находитесь.</string>
	<string name="info3">   	<b>ВАЖНО:</b> Каждое мероприятие будет отображаться на карте не больше 24 часов.</string>
	<string name="info4">   	На каждое мероприятие Вы можете откликнуться нажав на кнопку <b>"Я ПОЙДУ"</b>.</string>
	<string name="info5">   	Также у Вас есть возможноть написать владельцу мероприятия и узнать подробности, которые Вас интересуют.</string>
	<string name="info6">   	<b>Уачи в поиске своего мероприятия!</b></string>
</resources>