<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="30dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:layout_marginVertical="10dp"
                android:textAlignment="gravity"
                android:textSize="24dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info2"
                android:layout_marginVertical="10dp"
                android:textAlignment="gravity"
                android:textSize="24dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info3"
                android:layout_marginVertical="10dp"
                android:textAlignment="gravity"
                android:textSize="24dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info4"
                android:layout_marginVertical="10dp"
                android:textAlignment="gravity"
                android:textSize="24dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info5"
                android:layout_marginVertical="10dp"
                android:textAlignment="gravity"
                android:textSize="24dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info6"
                android:layout_marginVertical="10dp"
                android:textAlignment="center"
                android:textSize="24dp">

            </TextView>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>